# Ohjelmointi1

./: CMakeLists.txt  README.md
kotitehtavat/: kotitehtava3.c  kotitehtava4.c  kotitehtava5.c  kotitehtava6.c
minitehtavat/: main.c  minitehtava3.c  minitehtava4.c  minitehtavatViikko10.c  minitehtavatViikko3.c  minitehtavatViikko4.c  minitehtavatViikko5.c  minitehtavatViikko6.c  minitehtavatViikko7.c  minitehtavatViikko8.c  minitehtavatViikko9.c
